fixed overlapping

--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -2,7 +2,8 @@ a{
     color:black
 }
 #home{
-
+    // height: 20vh;
+margin-top: 10vh;
         .code-list{
             font-size: .85em;
            padding-right: 1em;
